# django-fizzbuzz

./: README.md  pyproject.toml  requirements.txt  setup.cfg
myproject/fizzbuzz/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
myproject/fizzbuzz/migrations/: 0001_initial.py
myproject/fizzbuzz/tests/: test_models.py  test_views.py
myproject/myproject/: settings.py  urls.py
